<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_front"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ba2364.inclassassignment07_benjamina.Front">
    <EditText
        android:id="@+id/titleview"
        style="@style/EditTextStyle"
        android:hint="@string/title"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/setTitle"
        android:onClick="setTitle"/>
    <EditText
        android:id="@+id/cityName"
        style="@style/EditTextStyle"
        android:hint="@string/city"/>
    <EditText
        android:id="@+id/nickname"
        style="@style/EditTextStyle"
        android:hint="@string/nickname"/>
    <EditText
        android:id="@+id/champs"
        style="@style/EditTextStyle"
        android:inputType="number"
        android:hint="@string/championships"/>
    <CheckBox
        android:id="@+id/playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/playing"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/newTeam"
        android:onClick="addTeam"/>
</LinearLayout>